Upgrade to Java 25 / Spring Boot 4.1, rework performance, add Meilisearch
Platform
- Java 21 -> 25 (latest LTS), Spring Boot 3.3.4 -> 4.1.0 (Spring Framework 7,
  Jackson 3, Hibernate 7.4, Lettuce 7). flake.nix and container images follow.
- Spotless 3.9.0 / google-java-format 1.36.1; the previous versions call javac
  internals that JDK 25 removed.

Performance
- Votes and favourites move from @ManyToMany collections to explicit join
  entities plus denormalised counters. A vote used to load every user who had
  ever voted on that post; it is now one upsert and one atomic counter update.
- Virtual threads enabled, Tomcat pool sized down to match.
- Pagination on every collection endpoint; nothing returns an unbounded list.
- DTO records + MapStruct replace serialising JPA entities directly.
- Spring Cache with per-cache TTLs and typed serializers replaces the
  hand-rolled Redis service, which had no TTL and flushed the whole database on
  every context refresh.
- @EntityGraph / @BatchSize, @Version optimistic locking, @Transactional
  boundaries, open-in-view off, HTTP/2, ETag, Lettuce pooling.
- RFC 9457 ProblemDetail advice replaces duplicated try/catch in nine
  controllers.

Dependencies (23 -> 20)
- Removed bucket4j and the rate-limit filter, spring-boot-devtools,
  testcontainers-minio (declared but unused) and H2.
- Removed springdoc in favour of a hand-maintained openapi.yaml.
- Flyway was not adopted; the existing ddl-auto + schema.sql workflow is kept,
  with schema.sql now generated from the JPA mapping so it cannot drift.

Search
- Meilisearch over files, subjects, posts and comments, with faceted filters.
- A transactional outbox keeps the index truthful: the dirty key is written in
  the same transaction as the change, so nothing rolled back is ever indexed
  and nothing committed is ever missed. The drainer waits for the Meilisearch
  task rather than trusting the 202, which would otherwise lose any change
  whose indexing task later failed.
- The o